--- a/presets/sync_server/config.json
+++ b/presets/sync_server/config.json
@@ -1,5 +1,7 @@
 {
   "local_id": "local_0",
   "retry_cnt": 3,
-  "loop_delay": 60
+  "loop_delay": 60,
+  "active_site": "studio",
+  "remote_site": "gdrive"
 }
